@@ -22,13 +22,9 @@ AC_DEFUN([AGS_DOCS_API],
 [
   AC_MSG_NOTICE([generating resources for API Reference Manual])
   `mkdir -p $PWD/docs/reference/libags/`
-  `cp -n $srcdir/docs/reference/libags/libags.xml $PWD/docs/reference/libags/ &2> /dev/null`
-  `tail -n +19 $srcdir/docs/reference/libags/libags-sections.txt.in > $PWD/docs/reference/libags/libags-sections.txt`
   `tail -n +19 $srcdir/docs/reference/libags/libags.types.in > $PWD/docs/reference/libags/libags.types`
   `tail -n +19 $srcdir/docs/reference/libags/libags.interfaces.in > $PWD/docs/reference/libags/libags.interfaces`
   `mkdir -p $PWD/docs/reference/libags-audio`
-  `cp -n $srcdir/docs/reference/libags-audio/libags_audio.xml $PWD/docs/reference/libags-audio/ &2> /dev/null`
-  `tail -n +19 $srcdir/docs/reference/libags-audio/libags_audio-sections.txt.in > $PWD/docs/reference/libags-audio/libags_audio-sections.txt`
   `tail -n +19 $srcdir/docs/reference/libags-audio/libags_audio.types.in > $PWD/docs/reference/libags-audio/libags_audio.types`
   AS_IF([test "x$enable_libinstpatch" != xno],
      `echo "ags_apply_sf2_midi_locale_get_type" >> $PWD/docs/reference/libags-audio/libags_audio.types`
@@ -68,13 +64,9 @@ AC_DEFUN([AGS_DOCS_API],
      )
   `tail -n +19 $srcdir/docs/reference/libags-audio/libags_audio.interfaces.in > $PWD/docs/reference/libags-audio/libags_audio.interfaces`
   `mkdir -p $PWD/docs/reference/libags-gui`
-  `cp -n $srcdir/docs/reference/libags-gui/libags_gui.xml $PWD/docs/reference/libags-gui/ &2> /dev/null`
-  `tail -n +19 $srcdir/docs/reference/libags-gui/libags_gui-sections.txt.in > $PWD/docs/reference/libags-gui/libags_gui-sections.txt`
   `tail -n +19 $srcdir/docs/reference/libags-gui/libags_gui.types.in > $PWD/docs/reference/libags-gui/libags_gui.types`
   `tail -n +19 $srcdir/docs/reference/libags-gui/libags_gui.interfaces.in > $PWD/docs/reference/libags-gui/libags_gui.interfaces`
   `mkdir -p $PWD/docs/reference/libgsequencer`
-  `cp -n $srcdir/docs/reference/libgsequencer/libgsequencer.xml $PWD/docs/reference/libgsequencer/ &2> /dev/null`
-  `tail -n +19 $srcdir/docs/reference/libgsequencer/libgsequencer-sections.txt.in > $PWD/docs/reference/libgsequencer/libgsequencer-sections.txt`
   `tail -n +19 $srcdir/docs/reference/libgsequencer/libgsequencer.types.in > $PWD/docs/reference/libgsequencer/libgsequencer.types`
   AS_IF([test "x$enable_libinstpatch" != xno],
      `echo "ags_sf2_synth_get_type" >> $PWD/docs/reference/libgsequencer/libgsequencer.types`
