@@ -1,7 +1,8 @@
 ags (5.1.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* improved gtk-doc
+	* improved gtk-doc conditional build
+	* improved gtk-doc rebuild sections
 
 ags (5.1.3)
 
